8156928: Removed redundant argLine from RT pom. Signed-off-by: Tomas Kraus <tomas.kraus@oracle.com>